Added basic protofile structure and package.json generation

--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "server",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Lucas Moesch",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -14,11 +14,7 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "proto:generate": "cpx ../protocol/lsx.proto ./proto && protoc --ts_proto_opt=useOptionals=true --ts_proto_out=. ./proto/lsx.proto"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
@@ -27,7 +23,8 @@
     "@nestjs/serve-static": "^2.2.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "ts-proto": "^1.115.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
@@ -39,6 +36,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "cpx": "^1.5.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
