Added backend classes

--- a/server/package.json
+++ b/server/package.json
@@ -21,10 +21,14 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
     "@nestjs/serve-static": "^2.2.2",
+    "@nestjs/websockets": "^8.4.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "ts-proto": "^1.115.4"
+    "ts-proto": "^1.115.4",
+    "websocket": "^1.0.34",
+    "winston": "^3.8.1",
+    "ws": "^8.8.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
