Connected websocket backend

--- a/server/package.json
+++ b/server/package.json
@@ -20,12 +20,12 @@
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/platform-ws": "^8.4.7",
     "@nestjs/serve-static": "^2.2.2",
     "@nestjs/websockets": "^8.4.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "ts-proto": "^1.115.4",
     "websocket": "^1.0.34",
     "winston": "^3.8.1",
     "ws": "^8.8.0"
@@ -38,6 +38,7 @@
     "@types/jest": "27.5.0",
     "@types/node": "^16.11.39",
     "@types/supertest": "^2.0.11",
+    "@types/ws": "^8.5.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "cpx": "^1.5.0",
@@ -51,6 +52,8 @@
     "ts-jest": "28.0.1",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
+    "ts-proto": "^1.117.0",
+    "ts-protoc-gen": "^0.15.0",
     "tsconfig-paths": "4.0.0",
     "typescript": "^4.3.5"
   },
