--- a/webapp/.gitignore
+++ b/webapp/.gitignore
@@ -1,5 +1,8 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# local environment
+env.js
+
 # compiled output
 /dist
 /tmp
