--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "speaker": "^0.5.4",
     "websocket": "^1.0.34",
     "winston": "^3.8.1",
     "ws": "^8.8.0"
