--- a/webapp/package.json
+++ b/webapp/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "proto:generate": "cpx ../protocol/* ./proto && protoc -I=./proto --ts_proto_opt=useOptionals=true --ts_proto_out=./proto ./proto/lsx.proto"
+    "proto:generate": "cpx '../protocol/*' ./proto && protoc -I=./proto --ts_proto_opt=useOptionals=true --ts_proto_out=./proto ./proto/lsx.proto"
   },
   "private": true,
   "dependencies": {
