--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webapp",
+  "name": "lsx-web",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@types/uuid": "^8.3.4",
+    "jsonwebtoken": "^9.0.2",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
