--- a/webapp/package.json
+++ b/webapp/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser-dynamic": "^18.0.1",
     "@angular/router": "^18.0.1",
     "@types/uuid": "^8.3.4",
-    "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "uuid": "^8.3.2",
