--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "protocol"]
 	path = protocol
 	url = https://github.com/PRIM-EDV/lsx-protocol
+[submodule "webapp/lib/phobos-elements"]
+	path = webapp/lib/phobos-elements
+	url = https://github.com/PRIM-EDV/phobos-elements
