--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     restart: always
     container_name: "lsx_server"
     ports:
-      - "3100:3100"
-    devices:
-      - "/dev/snd:/dev/snd"
+      - "3200:3100"
+    # devices:
+    #   - "/dev/snd:/dev/snd"
 
