--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-architects/native-federation": "^20.1.2",
     "@angular/animations": "^20.1.3",
     "@angular/common": "^20.1.3",
     "@angular/compiler": "^20.1.3",
@@ -18,7 +19,9 @@
     "@angular/platform-browser": "^20.1.3",
     "@angular/platform-browser-dynamic": "^20.1.3",
     "@angular/router": "^20.1.3",
+    "@softarc/native-federation-node": "^2.0.10",
     "@types/uuid": "^8.3.4",
+    "es-module-shims": "^1.5.12",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
@@ -26,6 +29,7 @@
     "zone.js": "~0.15.1"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^20.1.6",
     "@angular/build": "^20.1.6",
     "@angular/cli": "^20.1.3",
     "@angular/compiler-cli": "^20.1.3",
